<resources>
    <string name="app_name">MyFFCS</string>
    <string name="welcome_to_ffcs">myFFCS</string>
    <string name="manage_timetable_title_desc">The best way to manage your timetable</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="skip_registration">Skip</string>
    <string name="email_address_textview">Email address</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="email">Email</string>
    <string name="login_fragment">login_fragment_page</string>
    <string name="signup_fragment">signup_fragment_page</string>
    <string name="your_timetable">Edit courses</string>
    <string name="api_url">https://myffcs-api.herokuapp.com</string>
    <string name="course_selection_title">Edit your course list</string>
    <string name="course_search_textbox">Search for courses (ID/name)</string>
    <string name="view_timetable_button_title">View timetable</string>
    <string name="day_field_title">Day</string>
    <string name="time_field_title">Time</string>
    <string name="venue_field_title">Venue</string>
    <string name="course_wise_segmented_button_title">Course-wise</string>
    <string name="day_wise_segmented_button_title">Day-wise</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="register_course_button">Register</string>
</resources>
