<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DisplayTimeTableFragment">

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_blue_bg"
        android:drawableStart="@drawable/ic_arrow_left"
        android:drawablePadding="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="24dp"
        android:text="@string/your_timetable"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/segmented_course_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/go_back_button"
        app:layout_constraintStart_toStartOf="@+id/go_back_button"
        app:layout_constraintTop_toBottomOf="@+id/go_back_button"
        app:sbg_backgroundColor="@color/colorPrimary"
        app:sbg_draggable="false"
        app:sbg_position="0"
        app:sbg_radius="30dp"
        app:sbg_selectorColor="@android:color/white">

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            app:sb_text="@string/course_wise_segmented_button_title"
            app:sb_textColor="@android:color/white"
            app:sb_textColor_onSelection="@color/colorPrimary" />

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            app:sb_text="@string/day_wise_segmented_button_title"
            app:sb_textColor="@android:color/white"
            app:sb_textColor_onSelection="@color/colorPrimary" />

    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    <FrameLayout
        android:id="@+id/nested_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segmented_course_tabs" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/parent_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_labelsPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_icon="@drawable/ic_cloud_upload"
            app:fab_size="mini"
            app:fab_title="Save timetable to cloud" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/download_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_icon="@drawable/ic_cloud_download"
            app:fab_size="mini"
            app:fab_title="Sync local timetable to cloud" />


    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</androidx.constraintlayout.widget.ConstraintLayout>